--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2755,13 +2755,14 @@ The purpose of \DOL is to provide  a
 standardized representation language, which can be used to represent structured OMS and the relations 
 between OMS as part of OMS networks in a semantically well-defined way. Thus, tools that implement \DOL are able to integrate different OMS into a coherent whole, thereby enabling users of \DOL to overcome the different kind of interoperability issues that illustrated by the usage scenarios in this clause.  
 
-
+\cbs
 Most of the following subsections are illustrated with sample OMS
 libraries. These are always written in \DOL, see the \DOL Text
 Serialization in chapter ~\ref{a:text-syntax}. Naturally, they also
 contain parts written in different OMS languages (e.g.\ \OWL), the
 syntax of which is not described in this standard, but in other
 standard documents.
+\cbe
 
 %\section{Problem Statement}	
 %Logical languages are used in several fields of computing for the development of formal, machine-processable texts that carry a formal semantics. Among those fields are 1) ontologies formalizing domain knowledge, 2) formal models of systems, and 3) the formal specification of systems. Relevant languages include, but are not limited to:
@@ -8593,7 +8594,7 @@ The actual translations are specified in \cite{OntoGraph}.
 
 
 \infannex{Example Uses of all \DOL Constructs}\label{a:uses}
-
+\cbs
 This annex provides example uses of \DOL constructs.  Jointly with
 chapter~\ref{c:goal}, which already contains \DOL examples for the
 usage scenarios, all \DOL constructs (although not necessarily all
@@ -8601,7 +8602,7 @@ variants of each construct) are covered.  The examples follow the \DOL
 Text Serialization (chapter ~\ref{a:text-syntax}). The following table
 provides an overview of which \DOL language constructs have been 
 covered where.
-
+\cbe
 
 
 %\CLnote[type=q-aut]{Should we have another column here that refers to the \emph{abstract} syntax?}%
