--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1587,8 +1587,8 @@ syntaxes of OWL and Common Logic can be distinguished by examining the different
 However, for \DOL conformance, that application has to be capable of exporting documents with 
 explicit references to the logics used.
 
-DOL-aware applications also \shall be able to strip \DOL annotations
-from embedded fragments in other OMS languages. Moreover, they \shall
+DOL-aware applications also \cbs \shall \cbs be able to strip \DOL annotations
+from embedded fragments in other OMS languages. Moreover, they \cbs \shall \cbe
 be able to expand CURIEs into IRIs when requested.
 
 \index{conformance|)}
