--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1555,7 +1555,7 @@ A \emph{parser} is \DOL-conformant if it can parse the \DOL textual syntax and p
 \item
 A \emph{printer} is \DOL-conformant if it can read \DOL abstract syntax and produce \DOL textual syntax.
 \item
-Software that is used to \emph{edit, format or manage} \DOL libraries complies with this specification if and only if it is capable to process \DOL abstract syntax. Moreover, it needs to meets the requirements for a \DOL-conformant parser if it is able to process \DOL textual input. It needs to meet the requirements of a \DOL-conformant printer, if it is able to generare \DOL textual output. However, it is also possible that a software for \DOL management will work on the abstract syntax only, and delegates the processing of \DOL text to external parsers and/or printers.
+Software that is used to \emph{edit, format or manage} \DOL libraries complies with this specification if and only if it is capable to read and write \DOL abstract syntax. Moreover, it needs to meets the requirements for a \DOL-conformant parser if it is able to read in \DOL textual input. It needs to meet the requirements of a \DOL-conformant printer, if it is able to generare \DOL textual output. However, it is also possible that a software for \DOL management will work on the abstract syntax only, and delegates the reading and generation of \DOL text to external parsers and/or printers.
 \item a \emph{static analyser} is \DOL-conformant if it can compute
   the logic and the signature of an OMS according to the semantics
   defined in section~\ref{c:semantics}. In more detail, a static analyser
