--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -8197,11 +8197,11 @@ expressing that if $\sem{\ell}+1$ individuals have the specified property,
 at least two of them must be equal.
 
 
-\infannex{Conformance of Essential MOF with \DOL}\label{a:EMOF}
+%% \infannex{Conformance of Essential MOF with \DOL}\label{a:EMOF}
 
-Since essential MOF (EMOF) is a sublanguage of UML class diagrams,
-we can define a corresponding institution that is a subinstitution
-of that for UML class diagrams (see annex~\ref{a:uml-class}).
+%% Since essential MOF (EMOF) is a sublanguage of UML class diagrams,
+%% we can define a corresponding institution that is a subinstitution
+%% of that for UML class diagrams (see annex~\ref{a:uml-class}).
 
 
 \infannex{Conformance of TPTP with \DOL}\label{a:TPTP}
