--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1564,6 +1564,9 @@ DOL-conformant software that is used to \emph{edit, format or manage} \DOL libra
 \item \emph{simple analysis}: static analysis of DOL excluding networks and alignments;
 \item \emph{full analysis}: static analysis of full DOL.
 \end{itemize}
+\item a \emph{transformation tool} is DOL-conformat if it implements
+one (or more) language translations, logic translations, language
+projections and/or logic projections.
 \item
 Software that implements machine \emph{reasoning} about OMS (e.g., theorem proving, approximation)  complies with this specification if and only if it interprets  OMS libraries according to the semantics defined in section~\ref{c:semantics}. In more detail, a reasoning tool can have the following capabilities:
 \begin{itemize}
