--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2221,6 +2221,15 @@ along the alignment, there is only one concept, representing both
    and $s_2$ is a symbol from the \emph{target}  of the OMS mapping.
  \end{note}
 
+ \termdefinition{signature morphism}{mapping between two signatures,
+preserving the structure of the source signature within the target
+signature}
+ \begin{note}
+   A symbol map item is given as $s_1 \mapsto s_2$, where $s_1$ is a symbol from the \emph{source} OMS 
+   and $s_2$ is a symbol from the \emph{target}  of the OMS mapping.
+ \end{note}
+
+
   \termdefinitionLight{interpretation\index{interpretation}\synonym view\synonym refinement}{\termref{OMS mapping} that postulates a
 specialization relation
  between two \termref{OMS}} along a morphism between their signatures.
@@ -2282,7 +2291,7 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
  In \cite{MossakowskiTarlecki09}, a distinction between focused and distributed heterogeneous specifications is made. In the terminology of this standard, this is the distinction between \termref{OMS} and OMS networks.
 \end{note}
   \begin{note}
-    An OMS network is a diagram of OMS in the sense of category theory, but different from a diagram
+    An OMS network is a diagram of OMS in the sense of \termref{category} theory, but different from a diagram
     in the sense of model-driven architecture.
   \end{note}
  \begin{note}
@@ -2295,7 +2304,22 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
   two nodes, one for each ontology, and one edge from the source ontology to the target ontology of the interpretation. 
  \end{example}
 
-
+\cbs \termdefinition{category}{a collection of objects with suitable
+  morphisms between them.}
+\begin{note}
+In this standard, objects of a category are usually
+\termref{signatures} or \termref{OMS}, and morphisms
+are \termref{signature morphisms}, or \termref{OMS mappings}. In principle, no assumption
+about the exact nature of objects and morphisms is made.
+\end{note}
+\begin{note}
+The morphisms determine which part of the structure of the objects is
+relevant, i.e.\ preserved by morphisms. Hence, objects can be seen as
+``sets with structure'', and morphisms as ``structure-preserving
+maps''.  However note that not all categories can be obtained in this
+way.
+\end{note}
+\cbe
 
 
 \end{definitions}
