--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1277,7 +1277,7 @@ stating sentences about them;
 %% I believe that this is really obsolete now. –Christoph Lange, 2011-12-13
 % \item a formal definition of interoperability and how to measure the degree of interoperability of two systems\todonote[author=Christoph Lange,date=D:201110182133+02'00']{Well, now this might even be in scope.  We'll see...}
 \item mappings between services and devices, and definitions of service and device interoperability;
-\item non-monotonic logics\footnote{Logics (formalized as institutions) are necessarily monotonic; conformance criteria for non-monotonic logics ares till under development. However, minimization provides non-monotonic reasoning in \DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.}. 
+\item non-monotonic logics\footnote{Logics (formalized as institutions) are necessarily monotonic; conformance criteria for non-monotonic logics are still under development. However, minimization provides non-monotonic reasoning in \DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.}. 
 
 \end{enumerate}
 
@@ -1300,8 +1300,7 @@ these is discussed in informative annexes of this \IS.
 \begin{fminipage}{\textwidth}
 \textbf{Rationale}: for an OMS language to conform with \DOL,
 \begin{itemize}
-\item its logical language aspect\index{language aspect ! logical} either needs to satisfy certain criteria about its abstract
-syntax and formal semantics itself, or there must be a translation (again satisfying certain
+\item its logical language aspect\index{language aspect ! logical} either needs to satisfy certain criteria \cbs related to its own abstract syntax and formal semantics\cbe, or there must be a translation (again satisfying certain
 criteria) to a language that already is \DOL-conforming.
 \item its structuring language aspect\index{language aspect ! structuring} (if present) must not conflict with \DOL's own structuring
 mechanisms
@@ -1636,8 +1635,8 @@ be able to expand CURIEs into IRIs when requested.
   \item{W3C/TR REC-owl2-profiles:2009} {OWL 2 Web Ontology Language: Profiles. W3C Recommendation, 27 October 2009. \\
   \url{http://www.w3.org/TR/2009/REC-owl2-profiles-20091027/}}
   \item{ISO/IEC 24707:2007} {Information technology – Common Logic (CL): a framework for a family of logic-based languages}
-  \item{OMG Document ptc/2010-11-14:} {OMG Unified Modeling Language (OMG UML), Superstructure, Version 2.4. \\
-  \url{http://www.omg.org/spec/UML/2.4/Superstructure}. Section 7 (Classes)}
+  \item{OMG Document ptc/2013-09-05:} {OMG Unified Modeling Language (OMG UML)\\
+  cbs\url{http://www.omg.org/spec/UML/Current}}\cbe
   \item{IETF/RFC 3986} {Uniform Resource Identifier (URI): Generic Syntax. January 2005.\\ \url{http://tools.ietf.org/html/rfc3986}}
   \item{IETF/RFC 3987} {Internationalized Resource Identifiers (IRIs). January 2005.\\ \url{http://tools.ietf.org/html/rfc3987}}
   \item{IETF/RFC 5147} {URI Fragment Identifiers for the text/plain Media Type.  April 2008.\\ \url{http://tools.ietf.org/html/rfc5147}}
