fixed BibTeX syntax

--- a/Standard/dol-papers.bib
+++ b/Standard/dol-papers.bib
@@ -19,7 +19,7 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 
 
 @inbook{JYB-Festschrift2015-DOL,
-	Author = {T. Mossakowski, M. Codescu, F. Neuhaus, O. Kutz},
+	Author = {Till Mossakowski and Mihai Codescu and Fabian Neuhaus and Oliver Kutz},
 	Chapter = {{The distributed ontology, modelling and specification language - DOL}},
 	Date-Added = {2015-01-15 22:16:06 +0000},
 	Date-Modified = {2015-01-15 22:19:05 +0000},
