--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1519,7 +1519,7 @@ Any conforming serialization of an OMS language shall have a machine-processable
 \textbf{Rationale}: When a parser processes a \DOL OMS found somewhere, which refers to modules in OMS languages, or includes them verbatim, the parser needs to know what language to expect; further \DOL-supporting software needs to know, e.g., what other \DOL-conforming languages the module in the given OMS language can be translated to.  Therefore we require that all languages/logics/serializations that conform with \DOL describe themselves in a machine-comprehensible way.
 \end{fminipage}
 
-For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization be retrievable by dereferencing this IRI, according to the linked data principles.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:lola}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
+For any conforming OMS language, logic, and serialization of an OMS language, it is required that it be assigned an HTTP IRI, by which it can be identified.  It is also required that a machine-processable description of this language/logic/serialization be retrievable by dereferencing this IRI, according to the linked data principles \nisref{W3C/TR REC-ldp-20150226:2015}.  At least there has to be an RDF description in terms of the vocabulary specified in \aref{a:lola}, which has to be made available in the RDF/XML serialization when a client requests content of the MIME type \mimetype{application/rdf+xml}.  Descriptions of the language/logic/serialization in further representations, having different content types, may be provided.%\CLnote[type=fyi]{that opens the door for, \eg, OMDoc}
 
 
 \sclause{Conformance of a Document With \DOL}\label{c:conform:document}
@@ -1628,6 +1628,7 @@ be able to expand CURIEs into IRIs when requested.
 % The following referenced documents are indispensable for the application of this document. For dated references, only
 % the edition cited applies. For undated references, the latest edition of the referenced document (including any
 % amendments) applies.
+  \item{W3C/TR REC-ldp-20150226:2015} {Linked Data Platform 1.0. W3C Recommendation, 26 February 2015.\\ \url{http://www.w3.org/TR/2015/REC-ldp-20150226/}}
   \item{W3C/TR REC-owl2-syntax:2009} {OWL 2 Web Ontology Language: Structural Specification and Functional-Style Syntax. W3C Recommendation, 27 October 2009.\\ \url{http://www.w3.org/TR/2009/REC-owl2-syntax-20091027/}}
   \item{ISO/IEC 14977:1996} {Information technology – Syntactic metalanguage – Extended BNF}
   \item{W3C/TR REC-xml:2008} {Extensible Markup Language (XML) 1.0 (Fifth Edition). W3C Recommendation, 26 November 2008. \\
@@ -1924,9 +1925,9 @@ values (\eg, zero, one, and infinity). \nisref{IETF/RFC 3986:2005, Section 1.1}
 \termdefinition{element (of an OMS)}{any \termref{resource} in an \termref{OMS} (\eg a \termref{non-logical symbol}, a \termref{sentence}, a \termref{correspondence}, the \termref{OMS} itself, \dots) or a named set of such \termref{resources}.}
   
 
-\termdefinition{linked data}{structured data that is published on the Web in a machine-processable way, according to principles specified in \cite{BernersLee:LinkedData2006,BizerHeath09}.}
+\termdefinition{linked data}{structured data that is published on the Web in a machine-processable way, according to principles specified in \nisref{W3C/TR REC-ldp-20150226:2015}\footnote{The original source is widely accepted but not formally a standard~\cite{BernersLee:LinkedData2006}}.}
   \begin{note}
-    The linked data principles (adapted from \cite{BernersLee:LinkedData2006} and its paraphrase at \cite{Wikipedia:LinkedData2011}) are the following:
+    The linked data principles (adapted from \nisref{W3C/TR REC-ldp-20150226:2015} and its paraphrase at \cite{Wikipedia:LinkedData2011}) are the following:
     \begin{enumerate}
     \item Use IRIs as names for things.
     \item Use HTTP IRIs so that these things can be referred to and looked up (``dereferenced'') 
