Added UML class diagram to OWL2 translation

--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -785,3 +785,11 @@ YEAR = 1990}
    note = {Second edition},
    year = 1998}
 
+@incollection{zedlitz2012uml,
+  title={From UML to OWL 2},
+  author={Zedlitz, Jesper and J{\"o}rke, Jan and Luttenberger, Norbert},
+  booktitle={Knowledge Technology},
+  pages={154--163},
+  year={2012},
+  publisher={Springer}
+}
