copyright info fixed lead contact added

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -576,10 +576,10 @@ Version \version
 \nointerlineskip
 
 OMG Document Number: ad/2015-05-03 \\
-Normative reference: \\
+%Normative reference: \\
 Machine readable files(s): ad/2015-05-05, ad/2015-05-05, \dots, ad/2015-05-12, \\ \qquad \qquad \qquad ad/2015-05-14 \\
-Normative: \\
-Non-normative: \\
+%Normative: \\
+%Non-normative: \\
  
 
 \vskip 12pt
@@ -595,11 +595,11 @@ Non-normative: \\
 \pagenumbering{roman} 
 		
 
-\noindent Copyright \copyright 2014, Object Management Group, Inc.\\
-Copyright \copyright 2014, Fraunhofer FOKUS\\
-Copyright \copyright 2014, MITRE\\
-Copyright \copyright 2014, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
-Copyright \copyright 2014, Thematix Partners LLC \\
+\noindent Copyright \copyright 2014-15, Object Management Group, Inc.\\
+Copyright \copyright 2014-15, Fraunhofer FOKUS\\
+Copyright \copyright 2014-15, MITRE\\
+Copyright \copyright 2014-15, Otto-von-Guericke-Universit{\"a}t Magdeburg  \\
+Copyright \copyright 2014-15, Thematix Partners LLC \\
 
 
 
@@ -803,10 +803,9 @@ Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this j
 	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
 \end{itemize}
 
+The joint proposal is supported by Athan Services  and the Otto-von-Guericke University Magdeburg. 
 
-Clause 0 of this document contains information specific to the OMG submission process and is not part of the proposed specification. The proposed specification starts with Clause 1 “Scope”.
-
-
+The \textit{lead contact} for the proposal is Till Mossakowski (till@iws.cs.uni-magdeburg.de). 
 
 
 
