improved version of submitter info

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -796,16 +796,18 @@ The reader is encouraged to report any technical or editing issues/problems
 \setcounter{chapter}{-1}
 \chapter{Submission-Specific Material}
 \section{Submission Preface}
-Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Model and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The submitter contacts for this submission are:
+Fraunhofer FOKUS, MITRE, and Thematix Partners LLC are pleased  to submit this joint proposal in response to the Ontology, Model and Specification Integration and Interoperability (OntoIOp) RFP  (OMG document ad/2013-12-02). The joint proposal is supported by Athan Services  and the Otto-von-Guericke University Magdeburg. The contacts for this submission are:
 \begin{itemize}
 	\item Fraunhofer FOKUS, Andreas Hoffmann, andreas.hoffmann@fokus.fraunhofer.de
 	\item MITRE, Leo Obrst, lobrst@mitre.org
 	\item Thematix Partners LLC, Elisa Kendall, ekendall@thematix.com	
+	\item Athan Services, Tara Athan, taraathan@gmail.com
+	\item Otto-von-Guericke University Magdeburg, Till Mossakowski, till@iws.cs.uni-magdeburg.de  (\textit{lead contact})
 \end{itemize}
 
-The joint proposal is supported by Athan Services  and the Otto-von-Guericke University Magdeburg. 
 
-The \textit{lead contact} for the proposal is Till Mossakowski (till@iws.cs.uni-magdeburg.de). 
+
+
 
 
 
