- issue  #156 taken care of - version number is now in the triples :-)

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2,7 +2,7 @@
 % arara: makeindex 
 % arara: pdflatex: { synctex: on } 
 
-\newcommand{\version}{0.95}
+\newcommand{\version}{0.951}
 
 
 %todo
@@ -575,11 +575,11 @@ Version \version
 \vskip 12pt 
 \nointerlineskip
 
-OMG Document Number: ad/2015-05-03 \\
+OMG Document Number: ad/15-06-04  \\ %ad/2015-05-03
 %Normative reference: \\
-Machine readable files(s): ad/2015-05-05, ad/2015-05-05, \dots, ad/2015-05-12, \\ \qquad \qquad \qquad ad/2015-05-14 \\
+Machine readable files (normative): ad/2015-xx-yy, ad/2015-xx-yy \ednote{FixMe}\\
 %Normative: \\
-%Non-normative: \\
+%Informative: \\
  
 
 \vskip 12pt
