--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2571,19 +2571,14 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{CGIF}{Conceptual Graph Interchange Format}
 \symboldef{CL}{Common Logic }
 \symboldef{CLIF}{Common Logic Interchange Format}
-\symboldef{CORBA}{Common Object Request Broker Architecture}
 \symboldef{CURIE}{Compact URI expression}
-\symboldef{CWM}{Common Warehouse Metamodel}
 \symboldef{DDL}{Distributed description logic}
 \symboldef{DOL}{Distributed Ontology, Model and Specification Language}
 \symboldef{DTV}{Date-Time Vocabulary}
 \symboldef{EBNF}{Extended Backus-Naur Form}
 \symboldef{E-connections}{a modular ontology language (closely related to DDL)}
 \symboldef{F-logic}{frame logic, an object-oriented ontology language}
-\symboldef{IDL}{Interface Definition Language}
-\symboldef{IIOP}{Internet Inter-ORB Protocol}
 \symboldef{IRI}{Internationalized Resource Identifier}
-\symboldef{MDA}{Model Driven Architecture}
 \symboldef{MOF}{Meta-Object Facility}
 \symboldef{OCL}{Object Constraint Language}
 \symboldef{OWL 2}{Web Ontology Language (W3C), version 2: family of knowledge representation languages for authoring ontologies}
@@ -2595,8 +2590,6 @@ using the OWL 2 RDF-Based Semantics \cite{W3C:REC-owl2-rdf-based-semantics-20091
 \symboldef{OWL 2 RL}{fragment of OWL 2 designed to support rule-based reasoning}
 \symboldef{OWL 2 XML}{XML-based serialization of the OWL 2 language}
 \symboldef{P-DL}{Package-based description logic}
-\symboldef{PIM}{Platform-independent Model}
-\symboldef{PSM}{Platform-specific Model}
 \symboldef{RDF}{Resource Description Framework, a graph data model}
 \symboldef{RDFS}{RDF Schema}
 \symboldef{RDFa}{a set of XML attributes for embedding RDF graphs into XML documents}
@@ -9720,7 +9713,7 @@ to the term \termref{structured OMS} in this \IS}
 
 \sclause{The Heterogeneous Tool Set (Hets)}\label{a:hets} The
 Heterogeneous Tool Set (Hets) is \cbs an implementation \cbe of
-DOL. Hets a parsing, analysis and proof tool
+DOL. Hets is a parsing, analysis and proof tool
 for OMS, OMS networks and OMS mappings written in \DOL and
 DOL-conforming languages.  It supports a wide range of OMS languages
 and language translations, in particular OWL, RDF, Common Logic,
@@ -9768,7 +9761,7 @@ Ontohub/Modelhub/Spechub enjoys the following distinctive features:
   editor (and in the latter case pushed via Git); Git will synchronize both editing approaches,
   \item one and the same URL is used for referencing an OMS, downloading
      it (for use with tools), and for user-friendly presentation in
-     the browser (i.e.\ Ontohub/Modelhub/Spechub is fully linked-data compliant)
+     the browser (i.e.\ Ontohub/Modelhub/Spechub is fully linked-data compliant, \cbs see also the end of this section\cbe)
   \item modular and heterogeneous OMS are specially supported,
   \item OMS can not only be aligned (as in BioPortal and NeOn), but also be combined along alignments (using \DOL's \syntax{combine} construct),
   \item logical relations between OMS (interpretation of theories, conservative
