rephrase first sentence of 6.2 #163

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2618,9 +2618,12 @@ using the OWL 2 RDF-Based Semantics \cite{W3C:REC-owl2-rdf-based-semantics-20091
 This specification does not require or request any change to any other OMG specification. 
 
 \section{How to Read This Specification}
-The initial eight chapters of this specification are \emph{informative} providing  a high-level
+\cbs
+The initial five chapters of this specification describe the scope of the specification, determine conformance criteria, provide normative references, define terms and definitions, and introduce symbols that are used in the specification. 
+The next three chapters are \emph{informative}. This chapter provides some background information, the next two provide a high-level
  summary of usage scenarios and goals (Chapter \ref{c:goal}) and an overview over the design of
 \DOL  (Chapter \ref{c:design}).
+\cbe
 
 \medskip \noindent 
 Chapter \ref{c:abstract-syntax} defines the abstract syntax of \DOL (\emph{normative}) in Extended
@@ -2642,7 +2645,7 @@ translation that conform with \DOL  (\emph{normative}).
 \medskip \noindent Various languages are shown to  conform to \DOL in
 informative annexes: OWL2 (annex \ref{a:owl}), Common Logic
 (annex~\ref{a:cl}), RDF and RDF Schema (annex~\ref{a:rdfs}), UML class
-diagrams (annex~\ref{a:uml-class}, EMOF (annex~\ref{a:EMOF}), and
+diagrams (annex~\ref{a:uml-class}, TPTP (annex~\ref{a:TPTP}), and
 \CASL (annex \ref{a:casl}).
 
 \medskip \noindent 
